modifier  profil terminé

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,9 @@ h6 {
 # Main
 --------------------------------------------------------------*/
 #main {
-  margin-top: 15px;
+  margin-top: 12px;
   padding: 20px 30px;
+  padding-bottom: 0px;
   transition: all 0.3s;
 }
 
